Ui overflow  Issue Solved

--- a/src/index.css
+++ b/src/index.css
@@ -25,7 +25,7 @@ body {
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
-  overflow-x: auto;
+  overflow-x: hidden;
 }
 
 h1 {
